--- a/php-web-conhecendo-padrao-mvc/aluraplay/pages/login.html
+++ b/php-web-conhecendo-padrao-mvc/aluraplay/pages/login.html
@@ -23,7 +23,7 @@
             <a class="logo" href="../index.php"></a>
 
             <div class="cabecalho__icones">
-                <a href="./enviar-video.html" class="cabecalho__videos"></a>
+                <a href="enviar-video.php" class="cabecalho__videos"></a>
                 <a href="../pages/login.html" class="cabecalho__sair">Sair</a>
             </div>
         </nav>
