--- a/php-web-conhecendo-padrao-mvc/aluraplay/pages/login.html
+++ b/php-web-conhecendo-padrao-mvc/aluraplay/pages/login.html
@@ -20,7 +20,7 @@
     <header>
 
         <nav class="cabecalho">
-            <a class="logo" href="../index.php"></a>
+            <a class="logo" href="../listagemCursos.php"></a>
 
             <div class="cabecalho__icones">
                 <a href="../formulario.php" class="cabecalho__videos"></a>
